Minor fixes to round map

--- a/app/views/events/rounds/maps/_reference_point.html.haml
+++ b/app/views/events/rounds/maps/_reference_point.html.haml
@@ -15,7 +15,7 @@
     .btn-group
       %button.btn.btn-default.btn-xs.dropdown-toggle{'data-toggle': 'dropdown'}
         = reference_point_presentation
-      %ul.dropdown-menu
+      %ul.dropdown-menu.dropdown-menu-right
         %li
           %a{href: '#', 'data-action': 'click->events--competitor-reference-point#clear_reference_point'}
             %i.fa.fa-fw.fa-ellipsis-h
