Change tooltip message

--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -74,6 +74,6 @@
                       - highlight_exit = exit_altitude > 3810
                       %span
                         - if highlight_exit
-                          %i.fa.fa-exclamation-triangle.text-warning{'data-toggle': 'tooltip', title: 'Exit altitude is above allowed'}
+                          %i.fa.fa-exclamation-triangle.text-warning{'data-toggle': 'tooltip', title: 'Exit altitude SEEMS to be higher than allowed'}
                         Exit:
                         = exit_altitude
