WIP: Rewrite round map on preact

--- a/app/views/events/rounds/maps/show.html.erb
+++ b/app/views/events/rounds/maps/show.html.erb
@@ -1,3 +1,9 @@
 <% provide :title, @event.name %>
 
-<%= render 'round_map' %>
+<div
+  data-controller="events--round-map-v2"
+  data-event-id="<%= @event.id %>"
+  data-round-id="<%= @round.id %>">
+</div>
+
+<%# <%= render 'round_map' %>
