--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -7,7 +7,7 @@
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
 
   %body
-
+    #modal-root
     = render 'layouts/header' unless mobile_app?
 
     - if flash.count > 0
