--- a/app/views/events/_header.html.haml
+++ b/app/views/events/_header.html.haml
@@ -9,5 +9,5 @@
 %h3
   = "#{t('events.show.comp_window')}: #{@event.range_from} - #{@event.range_to} #{t('units.m')}"
 %h3
-  = render 'event_place'
+  = render 'events/event_place'
 
