Integrate shrine with track files

--- a/app/views/tracks/_track_metadata.html.haml
+++ b/app/views/tracks/_track_metadata.html.haml
@@ -14,5 +14,5 @@
 - if policy(@track).download? && @track.track_file
   %small
     Download file:
-    = link_to @track.track_file.file_file_name, track_download_path(@track), 'data-turbolinks': false
+    = link_to @track.track_file.file.original_filename, track_download_path(@track), 'data-turbolinks': false
 
