--- a/app/views/events/teams/show.html.erb
+++ b/app/views/events/teams/show.html.erb
@@ -10,7 +10,11 @@
     </div>
 
     <% if !@event.surprise? || can_manage %>
-      <div data-controller="events--teams-competition" data-event-id="<%= @event.id %>"></div>
+      <div
+        data-controller="events--teams-competition"
+        data-event-id="<%= @event.id %>"
+        data-editable="<%= can_manage %>"
+      ></div>
     <% else %>
       <h1 class="text-muted text-center">
         🙅 Let it be Surprise
