Upgrade to Rails 6.0.2

--- a/app/assets/stylesheets/_bootstrap_elements_override.scss
+++ b/app/assets/stylesheets/_bootstrap_elements_override.scss
@@ -1,3 +1,5 @@
+@import "bootstrap/variables";
+
 @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
   .container {
     padding-left: 15px;
