--- a/app/assets/stylesheets/_tournaments.scss
+++ b/app/assets/stylesheets/_tournaments.scss
@@ -1,3 +1,6 @@
+@import "./variables";
+@import "./fonts/*";
+
 .tournament-match {
   box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px;
   border-radius: 4px;
