--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -24,7 +24,7 @@
           - if @track.skydive? && @track_presenter.max_altitude > 3000 && @track_presenter.min_altitude < 2000
             = link_to 'FAI-2019: 3000-2000m', track_path(@track.id, f: 3000, t: 2000), class: 'btn btn-xs btn-default button--rounded'
           - if @track.skydive? && @track_presenter.max_altitude > 2500 && @track_presenter.min_altitude < 1500
-            = link_to 'FAI-2020+: 2500-1500m', track_path(@track.id, f: 2500, t: 1500), class: 'btn btn-xs btn-default button--rounded'
+            = link_to 'FAI-2020: 2500-1500m', track_path(@track.id, f: 2500, t: 1500), class: 'btn btn-xs btn-default button--rounded'
           %button.btn.btn-xs.btn-default.button--rounded#range-edit-button{data: {toggle:'modal', target:'#edit-range'}}
             Custom range
           = link_to 'Full jump', track_path(@track.id), class: 'btn btn-xs btn-default button--rounded', remote: true
