--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -21,6 +21,7 @@
 @import '../tracks/**/*';
 @import '../places/**/*';
 @import '../scoreboards';
+@import '../announcements';
 
 @import 'variables';
 @import '**/*';
