--- a/app/assets/stylesheets/desktop/navbar/_navbar.scss
+++ b/app/assets/stylesheets/desktop/navbar/_navbar.scss
@@ -5,6 +5,7 @@
 .navbar {
   background-color: $nav-background;
   box-shadow: 0 1px 2px 0 $box-shadow-dark;
+  border-radius: 0;
   display: flex;
   font-family: $pn-regular, $fallback-fonts;
   height: 60px;
