--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -27,9 +27,9 @@
             %span= track.location
 
           - if track.unlisted_track?
-            %i.far.fa-eye-slash{'data-toggle': 'tooltip', title: t('visibility.unlisted')}
+            %i.fa.fa-eye-slash{'data-toggle': 'tooltip', title: t('visibility.unlisted')}
           - elsif track.private_track?
-            %i.far.fa-lock{'data-toggle': 'tooltip', title: t('visibility.private')}
+            %i.fa.fa-lock{'data-toggle': 'tooltip', title: t('visibility.private')}
     .track-header__id= "##{track.id}"
   .row
     .col-md-12
