--- a/app/views/competition_series/show.html+mobile.erb
+++ b/app/views/competition_series/show.html+mobile.erb
@@ -5,8 +5,12 @@
     <div class="event__title"><%= @competition_series.name %></div>
   </div>
 
-  <h1 class="text-muted text-center">
-    🙅 Let it be Surprise
-  </h1>
+  <% if @competition_series.surprise? %>
+    <h1 class="text-muted text-center">
+      🙅 Let it be Surprise
+    </h1>
+  <% else %>
+    <%= render @scoreboard %>
+  <% end %>
 </div>
 
