--- a/app/views/competition_series/scoreboards/_scoreboard.html.erb
+++ b/app/views/competition_series/scoreboards/_scoreboard.html.erb
@@ -19,7 +19,7 @@
         <tr>
           <% scoreboard.rounds_by_discipline.each do |_discipline, rounds| %>
             <% rounds.each do |round| %>
-              <th class="scoreboard-round" colspan="2">
+              <th class="scoreboard-round <%= 'text-gray' if round.excluded? %>" colspan="2">
                 <%= round.number %>
               </th>
             <% end %>
@@ -29,9 +29,13 @@
         </tr>
         <tr>
           <% scoreboard.rounds_by_discipline.each do |discipline, rounds| %>
-            <% rounds.each do %>
-              <th class="text-center"><%= t("units.#{discipline_unit(discipline.to_sym)}")%></th>
-              <th class="text-center">%</th>
+            <% rounds.each do |round| %>
+              <th class="text-center <%= 'text-gray' if round.excluded? %>">
+                <%= t("units.#{discipline_unit(discipline.to_sym)}")%>
+              </th>
+              <th class="text-center <%= 'text-gray' if round.excluded? %>">
+                %
+              </th>
             <% end %>
           <% end %>
         </tr>
